This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

22-Feb-2011 (LDMud Team)  (3.3.720)
  - Created snapshot.

2011-02-22 (Gnomi)
  - Added checks for destroyed objects in clone_object(), process_string()
    and transfer(). (fixes #772)
    (simulate.c, efuns.c, object.c)

2011-02-19 (Zesstra)
  - Check 'deprecated' modifier for global variables.
    In addition to functions the compiler and symbol_variable() check if a
    global variable is deprecated and issue a warning.
    Local variables are not checked.
    (closure.c, prolang.y, interpret.c, prolang.y)

2011-02-19 (Zesstra)
  - Added check for 'deprecated' for lfun closures.
    Added a check for deprecated lfuns upon creation of closures by #'fun
    or #'::fun (compile-time).
    (lex.c, prolang.c)

2011-02-19 (Zesstra)
  - New modifier 'deprecated' for lfuns.
    Functions can be marked with 'deprecated', which causes a warning when
    they are called. Intra-object calls will cause compile-time warnings,
    inter-objects calls (callother, lfun closure calls) compile-time
    warnings.
    (prolang.y, lex.c, interpret.c, closure.c)

2011-02-19 (Zesstra)
  - Added testcases for some basic operators dealing with ints.
    Added some testcases for bitwise AND, OR, XOR, left shift, right shift,
    logical right shift, modulus and their respective assignment operators.

2011-02-19 (Zesstra)
  - pkg-gnutls: added some attributes for nonnull pointer arguments.
    Some functions should never get NULL pointers as args. Marked these
    args as 'nonnull'.
    (pkg-gnutls.c)

2011-02-19 (Zesstra)
  - pkg-gnutls:tls_write(): added comment about retries.
    GnuTLS and OpenSSL require a specific behaviour in case of interupted
    or blocking sockets. This adds a comment about the specifics of GnuTLS.
    (pkg-gnutls.c)

2011-02-19 (Zesstra)
  - pkg-gnutls:tls_read(): let caller retry reading later.